--- a/web/widget-front/WidGet.css
+++ b/web/widget-front/WidGet.css
@@ -18,7 +18,7 @@
     z-index: 123456789;
     width:350px;
     height:100%;
-    font-family: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif!important;
     -o-transition: all 0.2s;
     -moz-transition: all 0.2s;
     -webkit-transition: all 0.2s;
@@ -208,7 +208,7 @@
     z-index: 123456789;
     width:100%;
     height:100px;
-    font-family: Roboto!important;
+    font-family: "Roboto", sans-serif!important;
     transition: all 0.2s;
     -o-transition: all 0.2s;
     -moz-transition: all 0.2s;
