--- a/web/widget-front/WidGet.css
+++ b/web/widget-front/WidGet.css
@@ -370,3 +370,32 @@
     font-size: 14px;
     cursor: pointer;
 }
+
+.rate {
+    display: none;
+    cursor: default;
+    padding: 20px 0;
+    text-align: center;
+}
+.rate i {
+    cursor: pointer;
+    font-size: 2em;
+}
+.rate-form {
+    display: none;
+}
+.rate-form textarea {
+    outline: 0;
+    top: auto;
+    left: auto;
+    padding: 6px 10px!important;
+    margin: 0 0 7px!important;
+    border: 1px solid transparent!important;
+    border-radius: 5px;
+    width: 229px;
+    height: inherit;
+    background-color: rgba(0, 0, 0, .1)!important;
+    float: left;
+    box-sizing: content-box;
+    box-shadow: none;
+}
