--- a/web/widget-front/WidGet.css
+++ b/web/widget-front/WidGet.css
@@ -16,9 +16,10 @@
     right: -350px;
     top: 0;
     z-index: 123456789;
-    width:350px;
-    height:100%;
+    width: 350px;
+    height: 100%;
     font-family: "Roboto", sans-serif!important;
+    font-weight: 300;
     -o-transition: all 0.2s;
     -moz-transition: all 0.2s;
     -webkit-transition: all 0.2s;
@@ -122,7 +123,6 @@
     border-radius: 5px;
     padding: 5px 5px;
 }
-/*.robax-country-box:hover .robax-phone-type-list {display: block;}*/
 .robax-country-box {width: 40px; height: 29px; background: #D9D9D9; position: absolute; text-align: right;}
 .robax-country-box i {font-size: 9pt; vertical-align: -4px; display: inline-block;}
 .robax-phone-input {
@@ -158,8 +158,6 @@
     display: inline-block;
 }
 .robax-later__day .robax-later-sel {width: 142px; margin-left: -71px; z-index: 7;}
-/*.robax-later__day:hover .robax-later-sel {display: block;}
-.robax-later__hour:hover .robax-later-sel {display: block;}*/
 .robax-later__hour {background-position: 92% 50%;}
 .robax-later__hour .robax-later-sel {width: 85px; margin-left: -32px;}
 .robax-later__sep {padding: 6px 6px;width: auto;}
